<resources>
	<string name="app_name">LaunchApp</string>

	<string name="upcoming_title">Upcoming Launches</string>
	<string name="rocket_title">Rocket</string>
	<string name="details_title">Details</string>
	<string name="mission_title">Mission</string>

	<string name="net_label">Net</string>
	<string name="window_start_label">Window Start</string>
	<string name="window_end_label">Window End</string>

	<string name="watch_live">Watch Live</string>

	<string name="not_confirmed">Not Confirmed</string>

	<string name="msg_connection_error">Connection Error</string>

	<string name="status_launch_go">Launch is GO</string>
	<string name="status_launch_no_go">Launch is NO-GO</string>
	<string name="status_launch_success">Launch was a success</string>
	<string name="status_launch_failed">Launch failed</string>
	<string name="status_launch_unknown">Unknown Launch Status</string>

	<string name="menu_settings_title">Settings</string>

	<string name="pref_launchesNumber_key">pref_launchesNumber</string>
	<string name="pref_launchesNumber_title">Upcoming Launches</string>
	<string name="pref_launchesNumber_dialogTitle">@string/pref_launchesNumber_title</string>
	<string name="five_numeric">5</string>
	<string name="ten_numeric">10</string>
	<string name="fifteen_numeric">15</string>
	<string name="twenty_numeric">20</string>

</resources>
