<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="@string/status_launch_go"/>

	<TextView
		android:id="@+id/textView_net_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/net_label"
		app:layout_constraintLeft_toLeftOf="@+id/textView_status"
		app:layout_constraintRight_toRightOf="@+id/textView_status"
		app:layout_constraintTop_toBottomOf="@+id/textView_status"/>

	<TextView
		android:id="@+id/textView_net"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="@+id/textView_net_label"
		app:layout_constraintRight_toRightOf="@+id/textView_net_label"
		app:layout_constraintTop_toBottomOf="@+id/textView_net_label"
		tools:text="2016"/>

	<TextView
		android:id="@+id/textView_window_start_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/window_start_label"
		app:layout_constraintLeft_toLeftOf="@+id/textView_net"
		app:layout_constraintRight_toRightOf="@+id/textView_net"
		app:layout_constraintTop_toBottomOf="@+id/textView_net"/>

	<TextView
		android:id="@+id/textView_window_start"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="@+id/textView_window_start_label"
		app:layout_constraintRight_toRightOf="@+id/textView_window_start_label"
		app:layout_constraintTop_toBottomOf="@+id/textView_window_start_label"
		tools:text="2016"/>

	<TextView
		android:id="@+id/textView_window_end_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/window_end_label"
		app:layout_constraintLeft_toLeftOf="@+id/textView_window_start"
		app:layout_constraintRight_toRightOf="@+id/textView_window_start"
		app:layout_constraintTop_toBottomOf="@+id/textView_window_start"/>

	<TextView
		android:id="@+id/textView_window_end"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="@+id/textView_window_end_label"
		app:layout_constraintRight_toRightOf="@+id/textView_window_end_label"
		app:layout_constraintTop_toBottomOf="@+id/textView_window_end_label"
		tools:text="2017"/>

	<Button
		android:id="@+id/button_video"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/watch_live"
		app:layout_constraintLeft_toLeftOf="@+id/textView_window_end_label"
		app:layout_constraintRight_toRightOf="@+id/textView_window_end_label"
		app:layout_constraintTop_toBottomOf="@+id/textView_window_end"/>

</android.support.constraint.ConstraintLayout>
